# squad-jarvis

./: .env.example  .gitignore  README.md  pyproject.toml
squad_calc_ai/: main.py  main_nohotword.py
src/: __init__.py  audio_utils.py  main.py  main_novoice.py  main_ui.py  mortar_calc.py  recording.py  transcribe.py  tts.py  utils.py  wakeword.py
src/older_versions/: main_v1_no_tts.py
